# BakrNN

./: .gitignore  CMakeLists.txt
Testing/: CMakelists.txt  main.cpp
Testing/dependencies/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BakrNN.sln  BakrNN.vcxproj  BakrNN.vcxproj.filters  cmake_install.cmake
src/: Batch.cpp  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  OpenCLWrapper.cpp
src/include/: AllLayers.h  Batch.h  ConvLayer.h  Core.h  Filter.h  Layer.h  MaxPoolLayer.h  NeuralNetwork.h  OpenCLWrapper.h  RouteLayer.h  ShortcutLayer.h  Upsamplelayer.h  YOLOLayer.h
src/kernels/: convkernel.cl  fckernel.cl
